--- a/beresterk.html
+++ b/beresterk.html
@@ -14,18 +14,18 @@
 		<div class="page-content">
 			<h1>The Brown Bear</h1>
 			<nav class="top-nav">
+		<h2>Content</h2>
 				<ul>
 					<li>
 						<a href="#introduction">Introduction</a>
 					</li>
-        </ul>
 					<li>
 						<a href="#habitat">Habitat</a>
 					</li>
 					<li>
 						<a href="#media">Media</a>
 					</li>
-				
+				</ul>
 			</nav>
 			<div id="introduction">
 				<h2>About Brown Bears</h2>
