--- a/beresterk.html
+++ b/beresterk.html
@@ -3,6 +3,11 @@
 	<head>
 		<title>Brown Bears</title>
 		  <link rel="stylesheet" href="beresterk.css">
+		  <STYLE TYPE="text/css">
+<!-- 
+A{text-decoration:none}
+// -->
+</STYLE>
 	</head>
 
 	<body>
